--- a/index-2.html
+++ b/index-2.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-<!-- Petes code start -->
 <header>
 
     <h1>Hori<span class="seo">seo</span>n</h1>
@@ -26,14 +25,20 @@
         </ul> 
     </nav>
 </header>
-<figure img class="hero" alt="Picture of a business meeting"></figure>
+
+<!-- Petes code start -->
+<div class="hero" alt="Picture of a business meeting"></div>
+
 <main class="content">
     <article class="search-engine-optimization">
-        <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <figure class="seo">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
+        </figure>
+        
     </article>
 </main>
 <!-- Petes code end -->
