--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
 </head>
 
 <body>
-<header>
+<header>  
 
     <h1>Hori<span class="seo">seo</span>n</h1>
     <nav>
         <ul>
             <li>
-                <a href="#search-engine-optimization">Search Engine Optimization</a>
+                <a href="#search-engine-optimization" role="link" id="seoLink">Search Engine Optimization</a>
             </li>
             <li>
-                <a href="#online-reputation-management">Online Reputation Management</a>
+                <a href="#online-reputation-management" role="link">Online Reputation Management</a>
             </li>
             <li>
-                <a href="#social-media-marketing">Social Media Marketing</a>
+                <a href="#social-media-marketing" role="link">Social Media Marketing</a>
             </li>
         </ul> 
     </nav>
 </header>
 <section class="hero" alt="Picture of a business meeting"></section>
 <main>
-    <article alt="search engine optimization">
+    <article><a href="#seoLink" class="skip"> Skip to Search Engine Optimization content</a>
             <img src="./assets/images/search-engine-optimization.jpg" alt="Picture of a notbook reading S E O" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -35,7 +35,7 @@
             </p>
     </article>
 
-    <article alt="online reputation management">
+    <article><a href="#ormLink" class="skip"> Skip to online reputation management content</a>
         <img src="./assets/images/online-reputation-management.jpg" alt="Picture showing a computer displaying reputation ratings" class="float-right" />
         <h2>Online Reputation Management</h2>
         <p>
@@ -43,7 +43,7 @@
         </p>
     </article>
 
-    <article alt="social media marketing">
+    <article><a href="#smmLink" class="skip"> Skip to social media marketing content</a>
         <img src="./assets/images/social-media-marketing.jpg" alt="Picture showing people using technology for socializing" class="float-left" />
         <h2>Social Media Marketing</h2>
         <p>
@@ -54,21 +54,21 @@
     <aside>
             <section>
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="Horiseon proprietary image"/>
+                <img src="./assets/images/lead-generation.png" alt="Horiseon proprietary image demonstrating a revenue pipeline"/>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </section>
             <section>
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="Horiseon proprietary image"/>
+                <img src="./assets/images/brand-awareness.png" alt="Horiseon proprietary image demonstrating brand brand-awareness"/>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </section>
             <section>
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="Horiseon proprietary image"/>
+                <img src="./assets/images/cost-management.png" alt="Horiseon proprietary image representing cost-management"/>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
